# udf-price-oracle-solana

./: .dockerignore  .gitignore  .gitlab-ci.yml  .gitmodules  Anchor.toml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  fixmetadata.py  package.json  solana_config.yml
docker/: Dockerfile_module  Dockerfile_solana  build_solana_test_state.sh
keys/: gov-executor.json  owner.json  photon-keypair.json  price-consumer.json  publisher.json  udf_solana-keypair.json
migrations/: deploy.ts
price-publisher/: Cargo.toml  config.yml
price-publisher/src/: app.rs  config.rs  data.rs  data_feed_processor.rs  error.rs  lib.rs
programs/photon_mock/: Cargo.toml
programs/photon_mock/src/: lib.rs
programs/price-consumer/: Cargo.toml
programs/price-consumer-pull/: Cargo.toml
programs/price-consumer-pull/src/: lib.rs
programs/price-consumer/src/: lib.rs
programs/udf-solana/: Cargo.toml
programs/udf-solana/src/: data.rs  error.rs  hash.rs  lib.rs  utils.rs
tests/: udf-solana.ts  util.ts
tests/accounts/: transmitter_1  transmitter_2  transmitter_3
tests/types/: photon.ts
