[package]
name = "price-publisher"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
anchor-client = { version = "0.29", features = ["async"] }
anchor-lang = { version = "=0.29" }
config = "0.14"
chrono = "0.4"
env_logger = "0.9"
hex = "0.4"
log = "0.4"
once_cell = "1.19"
solana-tools = { path = "../solana-tools" }
tokio = "1.39"
udf-solana = { path = "../programs/udf-solana" }
serde = { version = "1.0", features = ["derive"] }
solana-sdk = "1.16"
thiserror = "1.0.63"
