[package]
name = "photon_mock"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "photon_mock"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
ahash = "=0.8.4"
anchor-lang = { version = "=0.29", features = ["init-if-needed"] }
ethabi = { version = "18.0", features = ["std"] }
hex = "0.4"
log = "0.4"
num_enum = "0.7"
sha3 = { version = "0.10", default-features = false }
