[package]
name = "price-consumer"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "price_consumer"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
mainnet = []
default = []

[dependencies]
anchor-lang = "0.29.0"
hex = "0.4.3"
solana-program = "1.17.3"
